# arffutils

./: .gitignore  LICENSE  README.md  arffutils.py  pyproject.toml
arffutils/: __init__.py  arffutils.py
tests/: arffutils_tests.py  data.arff  data.csv
