[build-system]
requires = ["setuptools>=47.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arffutils"
version = "0.1.0"
description = "Python library to convert from and to ARFF files"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.5.0",
]

[project.urls]
"Homepage" = "https://github.com/thdiaman/arffutils"