[build-system]
requires = ["setuptools>=61.0.0"] # Updated to version that fully supports PEP 621
build-backend = "setuptools.build_meta"

[project]
name = "arffutils"
version = "0.1.1"
description = "Python library to convert from and to ARFF files"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.5.0",
]
authors = [ { name = "thdiaman" } ]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["arff", "arffutils", "weka", "dataformat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/thdiaman/arffutils"
Issues = "https://github.com/thdiaman/arffutils/issues"
